responsive header and banner section added

--- a/index.html
+++ b/index.html
@@ -3,10 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gaming Page</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/b00ed3f2c7.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="nav-logo">
+                <img src="images/Frame.png" alt="">
+                <p><span>G</span>amer</p>
+            </div>
+            <div class="nav-item">
+                <ul>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Developers</a></li>
+                    <li class="btn-icon"><a href="">Follow Us On <i class="fa-brands fa-youtube"></i></a></li>
+                </ul>
+            </div>
+        </nav>
+
+       <div class="banner-container">
+        <div class="banner">
+            <div class="banner-content">
+                <h2 class="banner-title">Play Like The</h2>
+                <span>G.O.A.T.</span>
+                <p class="banner-info">1-Click instant play</p>
+                <p class="banner-info">No Download</p>
+                <p class="banner-info">1000s of supported online games</p>
+                <button class="btn-primary">Sign In</button>
+                <button class="btn-primary btn-primary-1">Go Rogue</button>
+            </div>
+            <div class="banner-img">
+                <img src="images/Group 18.png" alt="">
+            </div>
+        </div>
+       </div>
+    </header>
 </body>
 </html>
