--- a/index.html
+++ b/index.html
@@ -40,5 +40,36 @@
         </div>
        </div>
     </header>
+    <main>
+        <section class="online-games">
+            <div class="online-games-content">
+                <h2 class="online-title">Online Games <span>Funny Videos</span>
+                </h2>
+                <p class="online-info">A Collection of Hilarious Videos to Brighten Your Da</p>
+            </div>
+            <div class="games-card">
+                <div class="games-video-card">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <p class="games-card-info">No Download. No Installs. Play
+                        games Instantly on Gamer</p>
+                </div>
+                <div class="games-video-card">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <p class="games-card-info">Did you score? #unblockedgames
+                        #school</p>
+                </div>
+                <div class="games-video-card">
+                    <img src="images/Rectangle 7.png" alt="">
+                    <p class="games-card-info">Breaking game records
+                        like OG</p>
+                </div>
+                <div class="games-video-card">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <p class="games-card-info">Busted gaming on school laptop,
+                        but you are still lit</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
