--- a/index.html
+++ b/index.html
@@ -70,6 +70,72 @@
                 </div>
             </div>
         </section>
+
+        <section class="play-games">
+            <div class="play-games-img">
+                <img class="img-1" src="images/Rectangle 67.png" alt="">
+                <img class="img-2" src="images/Rectangle 78.png" alt="">
+            </div>
+            <div class="play-games-content">
+                <h2 class="play-games-title"><span>Play Games Online</span>Anywhere, <br> Anytime!</h2>
+                <p class="play-games-info">PC. dad s phone, moms tablet, or your Chromebook,
+                    with Gamer you can play your favorite games online
+                    for free, any time, anywhere , on any device.</p>
+            </div>
+        </section>
+     <section class="games-item-container">
+        <div class="games-item">
+            <div class="games-item-1">
+             <img src="images/Rectangle 11.png" alt="">
+             <p>Action Games</p>
+            </div>
+            <div class="games-item-1">
+             <img src="images/Rectangle 12.png" alt="">
+             <p>Adventure Games</p>
+            </div>
+            <div class="games-item-1">
+             <img src="images/Rectangle 13.png" alt="">
+             <p>Arcade Games</p>
+            </div>
+            <div class="games-item-1">
+             <img src="images/Rectangle 14.png" alt="">
+             <p>Educational Games</p>
+             </div>
+            <div class="games-item-1">
+             <img src="images/Rectangle 15.png" alt="">
+             <p>Word Games</p>
+            </div>
+            <div class="games-item-1">
+             <img src="images/Rectangle 16.png" alt="">
+             <p>Role Palying Games</p>
+            </div>
+            <div class="games-item-1">
+             <img src="images/Rectangle 17.png" alt="">
+             <p>Music & Audio Games</p>
+            </div>
+            <div class="games-item-1">
+             <img src="images/Rectangle 18.png" alt="">
+             <p>Puzzle Games</p>
+            </div>
+            <div class="games-item-1">
+             <img src="images/Rectangle 19.png" alt="">
+             <p>Strategy Games</p>
+            </div>
+         </div>
+     </section>
     </main>
+    
+    <footer>
+        <div class="footer-container">
+            <div class="foot-logo">
+                <img src="images/Frame.png" alt="">
+                <p><span>G</span>amer</p>
+            </div>
+            <div class="foot-list">
+
+            </div>
+        </div>
+
+    </footer>
 </body>
 </html>
