footer section added

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
          </div>
      </section>
     </main>
-    
+
     <footer>
         <div class="footer-container">
             <div class="foot-logo">
@@ -132,8 +132,34 @@
                 <p><span>G</span>amer</p>
             </div>
             <div class="foot-list">
-
+                <ul>
+                    <li><a href="">Our Story</a></li>
+                    <li><a href="">Games</a></li>
+                    <li><a href="">Web Games</a></li>
+                    <li><a href="">Careers</a></li>
+                    <li><a href="">Support</a></li>
+                    <li><a href="">My Accoun</a>t</li>
+                </ul>
             </div>
+            <div class="foot-icon-list">
+                <ul>
+                    <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-apple"></i></a></li>
+                </ul>
+            </div>
+            <div class="foot-list-1">
+                <ul>
+                    <li><a href="">Terms and Conditions</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Cookie Policy</a></li>
+                    <li><a href="">Privacy Settings</a></li>
+                </ul>
+            </div>
+            <small>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small>
         </div>
 
     </footer>
