--- a/index.html
+++ b/index.html
@@ -50,21 +50,29 @@
             <div class="games-card">
                 <div class="games-video-card">
                     <img src="images/Rectangle 4.png" alt="">
+                    <i class="fa-solid fa-circle-play"></i>
+                    <h4>Watch Now</h4>
                     <p class="games-card-info">No Download. No Installs. Play
                         games Instantly on Gamer</p>
                 </div>
                 <div class="games-video-card">
                     <img src="images/Rectangle 5.png" alt="">
+                    <i class="fa-solid fa-circle-play"></i>
+                    <h4>Watch Now</h4>
                     <p class="games-card-info">Did you score? #unblockedgames
                         #school</p>
                 </div>
                 <div class="games-video-card">
                     <img src="images/Rectangle 7.png" alt="">
+                    <i class="fa-solid fa-circle-play"></i>
+                    <h4>Watch Now</h4>
                     <p class="games-card-info">Breaking game records
                         like OG</p>
                 </div>
                 <div class="games-video-card">
                     <img src="images/Rectangle 6.png" alt="">
+                    <i class="fa-solid fa-circle-play"></i>
+                    <h4>Watch Now</h4>
                     <p class="games-card-info">Busted gaming on school laptop,
                         but you are still lit</p>
                 </div>
