favicon added in title

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaming Page</title>
+    <title>Gamer</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image" href="/images/Frame.png">
     <script src="https://kit.fontawesome.com/b00ed3f2c7.js" crossorigin="anonymous"></script>
 </head>
 <body>
