icon added in title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image" href="/title-icon/Frame.png">
+    <link rel="icon" type="image/png" href="/title-icon/Frame.png">
     <script src="https://kit.fontawesome.com/b00ed3f2c7.js" crossorigin="anonymous"></script>
 </head>
 <body>
