--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer</title>
-    <link rel="icon"  href="./title-icon/Frame.png" type="image/png">
+    <link rel="icon"  href="title-icon/Frame.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/b00ed3f2c7.js" crossorigin="anonymous"></script>
 </head>
