changed some styles

--- a/index.html
+++ b/index.html
@@ -49,37 +49,49 @@
                 <p class="online-info">A Collection of Hilarious Videos to Brighten Your Da</p>
             </div>
             <div class="games-card">
-                <div class="games-video-card">
-                    <img src="images/Rectangle 4.png" alt="">
-                    <i class="fa-solid fa-circle-play"></i>
-                    <h4>Watch Now</h4>
+                <div class="games-card-single">
+                    <div class="games-video-card">
+                        <img src="images/Rectangle 4.png" alt="">
+                        <i class="fa-solid fa-circle-play"></i>
+                        <h4>Watch Now</h4>
+                    </div>
                     <p class="games-card-info">No Download. No Installs. Play
                         games Instantly on Gamer</p>
                 </div>
+
+
+                <div class="games-card-single">
                 <div class="games-video-card"> 
                     <img src="images/Rectangle 5.png" alt="">
                     <i class="fa-solid fa-circle-play"></i>
                     <h4>Watch Now</h4>
-                    <p class="games-card-info">Did you score? #unblockedgames
-                        #school</p>
                 </div>
+                <p class="games-card-info">Did you score? #unblockedgames
+                    #school</p>
+                    </div>
+
+                    <div class="games-card-single">
                 <div class="games-video-card">
                     <img src="images/Rectangle 7.png" alt="">
                     <i class="fa-solid fa-circle-play"></i>
                     <h4>Watch Now</h4>
-                    <p class="games-card-info">Breaking game records
-                        like OG</p>
                 </div>
+                <p class="games-card-info">Breaking game records
+                    like OG</p>
+                    </div>
+
+                    <div class="games-card-single">
                 <div class="games-video-card">
                     <img src="images/Rectangle 6.png" alt="">
                     <i class="fa-solid fa-circle-play"></i>
                     <h4>Watch Now</h4>
-                    <p class="games-card-info">Busted gaming on school laptop,
-                        but you are still lit</p>
                 </div>
+                <p class="games-card-info">Busted gaming on school laptop,
+                    but you are still lit</p>
+                    </div>
             </div>
         </section>
-
+        
         <section class="play-games">
             <div class="play-games-img">
                 <img class="img-1" src="images/Rectangle 67.png" alt="">
@@ -154,7 +166,7 @@
                 <ul>
                     <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-youtube" style="color: red;"></i></a></li>
                     <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
                     <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
                     <li><a href=""><i class="fa-brands fa-apple"></i></a></li>
